--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       vr-mode-ui="enabled: false;"
       renderer="logarithmicDepthBuffer: true;"
       embedded
-      artoolkit="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;"
+      arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;"
     >
       <a-assets>
         <script>
