--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       vr-mode-ui="enabled: false;"
       renderer="logarithmicDepthBuffer: true;"
       embedded
-      arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;"
+      artoolkit="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;"
     >
       <a-assets>
         <script>
@@ -210,8 +210,7 @@
       >
         <a-video
           src="#milk"
-          width="200"
-          height="100"
+          scale="1 1 1"
           position="100 0 -50"
           rotation="-90 0 0"
           id="con-milk"
@@ -230,8 +229,7 @@
       >
         <a-video
           src="#greek"
-          width="200"
-          height="100"
+          scale="250 150 1"
           position="100 0 -50"
           rotation="-90 0 0"
           id="con-greek"
