--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <body style="margin: 0px; overflow: hidden;">
     <div class="arjs-loader">
-      <div>กรุณารอโหลดสักครู่...</div>
+      <div>กรุณารอโหลดสักครู่...แอ่</div>
     </div>
 
     <a-scene
