--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body style="margin : 0px; overflow: hidden;">
   <div class="arjs-loader">
-    <div>กรุณารอโหลดสักครู่...</div>
+    <div>กรุณารอโหลดสักครู่...1</div>
   </div>
 
   <a-scene
@@ -132,7 +132,7 @@
         vidhandler
         id="nft-greek"
         >
-            <a-video src="#greek" scale="130 80 0" position="10 0 -80"rotation="-90 0 0"></a-video>
+            <a-video src="#greek" scale="150 100 0" position="10 0 -80"rotation="-90 0 0"></a-video>
         </a-nft>
             
         <a-nft
