--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         vidhandler
         id="nft-sgx"
         >
-            <a-video src="#sgx" scale="600 500 0" position="40 0 -80"rotation="-90 0 0"></a-video>
+            <a-video src="#sgx" width="250" height="150" position="40 0 -80"rotation="-90 0 0"></a-video>
         </a-nft>
         
         <a-nft
